[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemyShip.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/laser.wav" type="AudioStream" id=3]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
radial_accel = 40.0
color = Color( 1, 0.101961, 0.101961, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.904

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.6588, 22.8226 )

[node name="Enemy" type="KinematicBody2D"]
z_index = 6
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="main" type="Particles2D" parent="."]
position = Vector2( 0, -17 )
rotation = -3.13955
amount = 50
lifetime = 1.5
speed_scale = 2.0
process_material = SubResource( 1 )

[node name="followPoint" type="Node2D" parent="."]
position = Vector2( 0, 55 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.493125, 0.878064 )
texture = ExtResource( 1 )

[node name="Fire" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="Fire" to="." method="_on_Fire_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
